--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,4 @@
+APP_NAME=dtb
 DJANGO_DEBUG=True
 DATABASE_URL=sqlite:///db.sqlite3
 #DATABASE_URL=postgres://postgres:postgres@db:5432/postgres  # when using PostgreSQL via docker-compose
