--- a/.github/workflows/dokku.yml
+++ b/.github/workflows/dokku.yml
@@ -11,15 +11,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-      with:
+      - name: Cloning repo 1
+        uses: actions/checkout@v4
+        with:
           fetch-depth: 0
 
-    - id: deploy
-      name: Deploy to dokku
-      uses: idoberko2/dokku-deploy-github-action@v1
-      with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          dokku-host: 't.okhlopkov.com'
-          app-name: 'dtb'
-          git-push-flags: '--force'
+      - name: Push to dokku 1
+        uses: dokku/github-action@master
+        with:
+          git_remote_url: 'ssh://dokku@alfaastro.ru:49345/dtb01'
+          ssh_private_key: ${{ secrets.TIMEWEB_ID_RSA }}
+          git_push_flags: '--force'
