--- a/.github/workflows/dokku.yml
+++ b/.github/workflows/dokku.yml
@@ -6,10 +6,8 @@ on:
       - main
 
 jobs:
-  build:
-
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Cloning repo 1
         uses: actions/checkout@v4
